--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
+    text-decoration: none;
 }
 
 :root {
@@ -25,10 +26,45 @@ body {
     box-sizing: border-box;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    height: 79px;
+    margin-bottom: 30px;
+}
+
+.header-logo {
+    Padding: 30px 50px; 
+}
+
+.logo {
+    width: 61.09px;
+    height: 19px;
+}
+
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    max-width: 344px;
+    gap: 68px;
+    height: 35px; 
+}
+
+
+
+.menu-btn:hover {
+    color: var(--main-color);
+    border-top: solid 0.125rem var(--main-color);
+    padding-top: 0.875rem;
+}
+
 a {
     color: inherit;
     text-decoration: none;
 }
+
 
 .section-title {
     margin: 0;
@@ -163,5 +199,35 @@ a {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+    header {
+        flex-direction: column;
+        align-items: center;
+        height: 115px;
+    }
+
+    
+    .header-logo {
+        Padding: 30px; 
+    }
+
+    .menu {
+        align-items: start;
+        width: 100%;
+        text-align: center;
+        gap: 0;
+    }
+
+    .menu-btn {
+        width: 50%;
+        border-bottom: 0.938rem;
+    }
+
+    .menu-btn:hover {
+    color: var(--main-color);
+    border-bottom: solid 0.125rem var(--main-color);
+    border-top: none;
+    padding-top: 0;
+    padding-bottom: 0.875rem; 
+    }
 }
+
