--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
     --filter-bg-color: #DEEBFF;
 }
 
+::-webkit-input-placeholder { /* Pour les navigateurs WebKit */
+    color: #000000; /* Couleur du texte du placeholder */
+}
+
 .fa-solid {
     color: var(--main-color);
 }
@@ -26,6 +30,8 @@ body {
     box-sizing: border-box;
 }
 
+/* Header */
+
 header {
     display: flex;
     justify-content: space-between;
@@ -34,10 +40,10 @@ header {
 }
 
 .header-logo {
-    Padding: 30px 50px; 
+    Padding: 30px 50px 30px 0; 
 }
 
-.logo {
+.logo-png {
     width: 61.09px;
     height: 19px;
 }
@@ -65,7 +71,94 @@ a {
     text-decoration: none;
 }
 
+/* form info-group */
 
+.info-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.info-group-headline {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.info-group-headline h2 {
+    margin: 0;
+}
+
+.info-group-headline p {
+    margin: 0;
+}
+
+.info-group-search-bar {
+    margin-top: 35px;
+    display: flex;
+    height: 49px;
+    border: 1px solid #F2F2F2;
+    width: 377px;
+    gap: 24px;
+}
+
+.info-group-search-bar img {
+    width: 50px;
+}
+
+.info-group-search-bar input {
+    width: 147px;
+    align-self: center;
+    border: none;
+}
+
+.info-group-search-bar button {
+    color: #ffffff;
+    background-color: #0065FC;
+    border-color: #0065FC;
+    border-radius: 0px 15px 15px 0px;
+    width: 132px;
+}
+
+
+.info-group-search-bar input, button {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+
+/* info-group-filter */
+
+.info-group-filter {
+    width: 758px;
+    margin-top: 35px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    gap: 15px
+}
+
+.info-group-filter h2 {
+    font-size: 18px;
+}
+
+.box-filter {
+    Padding: 15px 19px;
+    border: 1px solid #D9D9D9;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: nowrap;
+    font-weight: 700;
+    font-size: 17px;
+}
+
+.info-group-info-bar {
+    margin-top: 35px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 .section-title {
     margin: 0;
     font-size: 22px;
@@ -205,7 +298,6 @@ a {
         height: 115px;
     }
 
-    
     .header-logo {
         Padding: 30px; 
     }
