--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: end;
-    max-width: 344px;
     gap: 68px;
     height: 35px; 
 }
@@ -96,7 +95,7 @@ a {
     margin-top: 35px;
     display: flex;
     height: 49px;
-    border: 1px solid #F2F2F2;
+    border: 1px solid var(--main-bg-color);
     width: 377px;
     gap: 24px;
 }
@@ -109,12 +108,15 @@ a {
     width: 147px;
     align-self: center;
     border: none;
+    outline: none; /* Permet de desactiver la bordure au clic */
 }
+
+
 
 .info-group-search-bar button {
     color: #ffffff;
-    background-color: #0065FC;
-    border-color: #0065FC;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
     border-radius: 0px 15px 15px 0px;
     width: 132px;
 }
@@ -139,6 +141,11 @@ a {
 
 .info-group-filter h2 {
     font-size: 18px;
+}
+
+.info-group-box {
+    display: flex;
+    gap: 15px;
 }
 
 .box-filter {
@@ -292,6 +299,11 @@ a {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
+    .main-container {
+        padding: 0;
+    }
+    
+    
     header {
         flex-direction: column;
         align-items: center;
@@ -321,5 +333,17 @@ a {
     padding-top: 0;
     padding-bottom: 0.875rem; 
     }
+
+    /* info-group */
+
+    .info-group-search-bar button {
+        background-image: url('images/logo/search2.svg');
+    }
+
+    .info-group-search-bar span {
+        visibility: hidden;
+    }
 }
+
+
 
