--- a/css/style.css
+++ b/css/style.css
@@ -95,14 +95,10 @@ a {
     margin-top: 35px;
     display: flex;
     height: 49px;
-    border: 1px solid var(--main-bg-color);
-    width: 377px;
     gap: 24px;
 }
 
-.info-group-search-bar img {
-    width: 50px;
-}
+
 
 .info-group-search-bar input {
     width: 147px;
@@ -113,12 +109,18 @@ a {
 
 
 
-.info-group-search-bar button {
+.search-button-desktop {
     color: #ffffff;
     background-color: var(--main-color);
-    border-color: var(--main-color);
+    border: none;
     border-radius: 0px 15px 15px 0px;
     width: 132px;
+}
+
+
+
+.search-button-mobile i {
+    color: #FFFFFF;
 }
 
 
@@ -295,6 +297,13 @@ a {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+    /* info-group */
+
+    .search-button-mobile {
+        display: none;
+    }
+
 }
 
 /* Small devices (phones, less than 768px) */
@@ -336,14 +345,25 @@ a {
 
     /* info-group */
 
-    .info-group-search-bar button {
-        background-image: url('images/logo/search2.svg');
+    .search-button-desktop {
+        display: none;
     }
 
-    .info-group-search-bar span {
-        visibility: hidden;
-    }
+    
+    .search-button-mobile {
+        width: 49px;
+        height: 49px;
+        background-color: var(--main-color);
+        border: none;
+        border-radius: 15px 15px 15px 15px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+        position: relative;
+        right: 15px;
+        }
 }
+    
+    
+
 
 
 
