--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ a {
 
 .hebergements-card img {
     width: 100%;
-    height: 124px;
+    height: 124px; 
     display: flex;
     justify-content: space-between;
     border-radius: 20px 20px 0 0;
@@ -328,7 +328,62 @@ a {
     margin-bottom: 5px;
 }
 
+/* Activite */
 
+.activite {
+    margin-top: 35px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.activite-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
+}
+
+.activite-cards .activite-card {
+    height: 439px;
+    border-radius: 20px;
+    box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.10);
+}
+
+.activite-cards img {
+    width: 100%;
+    height: 380px;
+    display: flex;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+
+.activite-card .activite-card-subtitle {
+    padding: 20px 19px 20px 19px;
+    background-color: #FFFFFF;
+}
+
+/* footer */
+
+footer {
+    padding-top: 35px;
+    background-color: #F2F2F2;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer-information {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    align-self: start;
+}
+
+.footer-title {
+    margin: 0;
+}
 
 /****** Media queries ***********/
 
@@ -399,7 +454,16 @@ a {
         font-size: 13px;
     }
 
-    
+    /* Activite */
+
+    .activite-cards .activite-card {
+        height: 270px;  
+    }
+
+    .activite-cards img {
+       height: 200px; 
+    }
+
 }
 
 /* Small devices (phones, less than 768px) */
@@ -498,6 +562,28 @@ a {
         }
 
         .hebergements-cards {
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Activite */
+
+        .activite-cards {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .activite-cards .activite-card {
+            height: 200px;  
+        }
+    
+        .activite-cards img {
+           height: 141px; 
+        }
+
+        /* footer */
+
+        footer {
             display: flex;
             flex-direction: column;
         }
