--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
+    --filter-bd-color: #D9D9D9;
     --pur-white-color: #FFFFFF;
 }
 
@@ -20,13 +21,10 @@
 }
 
 
-
 .bold {
     font-weight: 700;
     font-size: 18px;
 }
-
-
 
 body {
     display: flex;
@@ -41,6 +39,14 @@ body {
 }
 
 h3 {
+    font-size: 16px;
+}
+
+a {
+    color:#000000;
+}
+
+p {
     font-size: 16px;
 }
 
@@ -90,7 +96,7 @@ header {
     gap: 8px;
 }
 
-.info-group-headline h2,
+.info-group-headline h1,
 .info-group-headline p {
     margin: 0;
 }
@@ -153,7 +159,7 @@ header {
 
 .info-group-box-filter {
     Padding: 15px 19px;
-    border: 1px solid var(--filter-bg-color);
+    border: 1px solid var(--filter-bd-color);
     border-radius: 25px;
     display: flex;
     align-items: center;
@@ -196,14 +202,14 @@ header {
 }
 
 .hebergements-title, .populaires-title {
-    font-size: 22px;
+    font-size: 1.375rem;
 }
 
 /****** Hebergements ***********/
 .hebergements {
     display: flex;
     flex-direction: column;
-    width: 66.66%;
+    width: 65%;
     gap: 30px;
 }
 
@@ -245,7 +251,7 @@ header {
 
 .hebergements-cards .hebergements-card-subtitle {
     margin-top: 0;
-    margin-bottom: 8px;
+    margin-bottom: 0.5rem;
 }
 
 .hebergements-cards .hebergements-card-rating {
@@ -254,7 +260,7 @@ header {
 
 /****** Populaires ***********/
 .populaires {
-    width: 33.33%;
+    width: 32%;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -328,6 +334,7 @@ header {
 }
 
 .activite-cards .activite-card {
+    width: 100%;
     height: 439px;
     border-radius: 20px;
     box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.10);
@@ -342,6 +349,7 @@ header {
 }
 
 .activite-card .activite-card-subtitle {
+    font-size: 16px;
     padding: 20px 19px 20px 19px;
     background-color: var(--pur-white-color);
 }
@@ -370,6 +378,34 @@ footer {
 
 /****** Media queries ***********/
 
+@media screen and (min-width:1024px) and (max-width:1200px) {
+    /* Ce media sert a regler le problème de déformation des grilles 
+    sur la partie hebergements */
+    
+    .hebergements-card-title,
+    .hebergements-card-subtitle {
+        font-size: 12px;
+    }
+
+    .populaires-card-title,
+    .populaires-card-subtitle {
+        font-size: 14px;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width:823px) {
+    .hebergements-card-title,
+    .hebergements-card-subtitle {
+        font-size: 12px;
+    }
+
+    .populaires-card-title,
+    .populaires-card-subtitle {
+        font-size: 14px;
+    }
+}
+
+
 
 @media screen and (min-width:1024px) {
     .info-group-search-button-mobile {
@@ -377,7 +413,6 @@ footer {
     }
 
 }
-
 
 /* Medium devices (tablets, less/equal than 1024px) */
 @media screen and (min-width:768px) and (max-width: 1024px) { 
@@ -409,9 +444,6 @@ footer {
         width: 100%;    
     }
 
-    .hebergements-cards {
-        flex-direction: column;
-    }
 
     .populaires {
         margin-top: 50px;
@@ -445,14 +477,19 @@ footer {
        height: 200px; 
     }
 
+    
 }
 
 /* Small devices (phones, less than 768px) */
-@media screen and (min-width: 280px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .main-container {
         padding: 0;
     }
     
+    body {
+       width: auto;
+    }
+
     /* header */
 
     header {
@@ -533,6 +570,7 @@ footer {
         .hebergements-and-populaires {
             flex-direction: column-reverse;
         }
+
 
         .hebergements,
         .populaires {
